<resources>
    <string name="app_name">HomeAutomation</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">HOME AUTOMATION</string>
    <string name="splash_screen_tagline">Home control and management made easy.</string>
    <string name="action_settings">Settings</string>
    <string name="hint_ipaddress">Server address</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_logout">Logout</string>
    <string name="err_msg_username">Enter valid username</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="status1">Power consumption</string>
    <string name="status2">Total power remaining</string>
    <string name="status3">Estimated time left</string>
</resources>
