<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="#1c0850"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/logo"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="60dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_ipaddress"
                android:theme="@style/CheckboxTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_ipaddress"
                    android:theme="@style/CheckboxTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_ipaddress" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:theme="@style/CheckboxTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_username"
                    android:theme="@style/CheckboxTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_username" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:theme="@style/CheckboxTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/CheckboxTheme"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password" />
            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/btn_submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_submit"
                android:background="#8e25bd"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Keep me logged in"
                android:theme="@style/CheckboxTheme"
                android:id="@+id/loggedIn"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </RelativeLayout>
